# py-xdynamo

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
0.1.0/: index.html
0.1.0/api/xmodel_dynamo/: api.html  common_types.html  structure.html
0.1.0/changelog/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html
0.1.1/api/xmodel_dynamo/: utils.html
0.1.1/changelog/: index.html
0.1.1/search/: search_index.json
0.10.0/: index.html
0.10.0/api/xdynamo/: api.html  fields.html  index.html
0.10.0/changelog/: index.html
0.10.0/search/: search_index.json
0.2.0/: 404.html  index.html
0.2.0/api/xdynamo/: client.html  fields.html  structure.html
0.2.0/changelog/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html
0.3.0/changelog/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html
0.4.0/api/xdynamo/: resources.html
0.4.0/changelog/: index.html
0.4.0/search/: search_index.json
0.5.0/: index.html
0.5.0/api/xdynamo/: fields.html  structure.html
0.5.0/changelog/: index.html
0.5.0/search/: search_index.json
0.6.0/api/xdynamo/: db.html  index.html
0.6.0/changelog/: index.html
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html
0.7.0/api/xdynamo/: client.html
0.7.0/changelog/: index.html
0.7.0/search/: search_index.json
0.8.0/: index.html
0.8.0/api/xdynamo/: fields.html  index.html
0.8.0/changelog/: index.html
0.8.0/search/: search_index.json
0.8.1/: 404.html  index.html
0.8.1/api/xdynamo/: client.html  model.html  utils.html
0.8.1/changelog/: index.html
0.8.1/search/: search_index.json
0.8.2/: index.html
0.8.2/api/xdynamo/: client.html
0.8.2/changelog/: index.html
0.8.2/search/: search_index.json
0.9.0/: index.html
0.9.0/api/xdynamo/: client.html  common_types.html
0.9.0/changelog/: index.html
0.9.0/search/: search_index.json
0.9.1/: 404.html  index.html
0.9.1/api/xdynamo/: client.html  const.html  errors.html  resources.html
0.9.1/changelog/: index.html
0.9.1/search/: search_index.json
0.9.2/: index.html
0.9.2/api/xdynamo/: structure.html
0.9.2/changelog/: index.html
0.9.2/search/: search_index.json
docs/: index.md
latest/api/xdynamo/: api.html  client.html  common_types.html  const.html  db.html  errors.html  index.html  model.html  structure.html  utils.html
latest/api/xmodel_dynamo/: client.html  db.html  errors.html  fields.html  index.html  model.html  resources.html
latest/changelog/: index.html
tests/: __init__.py  test_dynamo.py
xdynamo/: __init__.py  api.py  client.py  common_types.py  const.py  db.py  errors.py  fields.py  model.py  resources.py  structure.py
xmodel_dynamo/: db.py  errors.py  model.py  resources.py  structure.py  utils.py
