[tool.poetry]
name = "xdynamo"
version = "0.9.0"
description = "Use dynamo with xmodel objects."
authors = ["Josh Orr <josh@orr.blue>"]
packages = [{include = "xdynamo"}]
readme = "README.md"
repository = "https://github.com/xyngular/py-xdynamo"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.17.54"

xmodel = "^1"
xinject = "^1.4.0"
xloop = "^1.0.1"
xsentinels = "^1.2.1"
xurls = "^1"
ciso8601 = "^2.3.0"
xsettings = "^1.3.0"
xboto = "^1.0.2"

[tool.poetry.group.dev.dependencies]
xcon = "^0.4.1"
ipdb = "^0.13.9"
autopep8 = "^1.5.7"
pycodestyle = "^2.7.0"
pdoc3 = "^0"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
black = {version = "*", allow-prereleases = true}
mkdocstrings = { extras = ["python"], version = "^0" }
mkdocs-autorefs = "^0"
mkdocs-git-revision-date-plugin = "^0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mike = "^1.1.2"
tomlkit = "^0.11.7"
moto = {extras = ["dynamodb"], version = "^4.1.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target_version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
